<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Account</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="wx_share">微信分享</string>
    
    <string name="select_name">选择人名</string>
    <string name="name_li">李</string>
    <string name="name_cui">崔</string>
    <string name="name_zhang">张</string>
    <string name="name_xu">徐</string>
    <string name="name_wang">王</string>
    <string name="name_guo">郭</string>
    <string name="name_hu">胡</string>
    <string name="add_money">添加金额</string>
    <string name="add_money_hint">请输入金额（以“+”或“-”分隔）…</string>
    <string name="add_person">添加人员</string>
    
    <string name="name">姓名</string>
    <string name="money">金额</string>
    <string name="totalMoney">总金额</string>
    <string name="diffMoney">差额</string>
    <string name="averageMoney">平均值</string>
    <string name="time">时间</string>
    
    
    <string name="calculate">开始计算</string>
    
    <string name="noRecord">查询不到相关信息…</string>

</resources>
