<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transGray"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding_normal"
    android:paddingLeft="@dimen/padding_xlarger"
    android:paddingTop="@dimen/padding_normal" >

    <TextView
        android:id="@+id/textView_name"
        style="@style/TextViewInLinear" />

    <TextView
        style="@style/TextView"
        android:text="@string/money" />

    <TextView
        android:id="@+id/textView_money"
        style="@style/TextViewInLinear"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="0" />

    <TextView
        style="@style/TextView"
        android:text="@string/totalMoney" />

    <TextView
        android:id="@+id/textView_totalMoney"
        style="@style/TextViewInLinear"
        android:text="0"
        android:textColor="@color/holo_red_light" />

    <TextView
        style="@style/TextView"
        android:text="@string/diffMoney" />

    <TextView
        android:id="@+id/textView_diffMoney"
        style="@style/TextViewInLinear"
        android:text="0"
        android:textColor="@color/holo_red_light" />

</LinearLayout>