<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout_addItem"
            style="@style/Linear"
            android:background="@color/holo_orange_light"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_name"
                android:layout_width="@dimen/spinnerWidth"
                android:layout_height="wrap_content"
                android:entries="@array/array_name" />

            <EditText
                android:id="@+id/editText_money"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/add_money_hint"
                android:minHeight="@dimen/linearHeight" />
        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalDivider"
            android:background="@color/holo_blue_light" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_add"
            style="@style/Linear"
            android:background="@color/holo_orange_light"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linearLayout_addMoney"
                style="@style/Button.average.background" >

                <TextView
                    style="@style/Button"
                    android:drawableLeft="@drawable/ic_menu_btn_add"
                    android:text="@string/add_money" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_addDivider"
                style="@style/VerticalDivider"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout_addPerson"
                style="@style/Button.average.background" >

                <TextView
                    style="@style/Button"
                    android:drawableLeft="@drawable/ic_menu_invite"
                    android:text="@string/add_person" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView style="@style/HorizontalDivider" />

            <LinearLayout
                style="@style/Linear"
                android:background="@color/holo_orange_light"
                android:padding="0dp" >

                <include layout="@layout/listview_content_item" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView_content"
                style="@style/ListView"
                android:background="@color/transWhite" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_result"
            style="@style/Linear"
            android:background="@color/holo_orange_light"
            android:padding="@dimen/padding_small" >

            <TextView
                style="@style/TextView"
                android:text="@string/totalMoney"
                android:textColor="@color/holo_blue_light"
                android:textSize="@dimen/tv_large" />

            <TextView
                android:id="@+id/textView_totalMoney"
                style="@style/TextViewInLinear"
                android:paddingLeft="@dimen/padding_normal"
                android:textColor="@color/holo_red_light"
                android:textSize="@dimen/tv_large" />

            <TextView
                style="@style/TextView"
                android:text="@string/averageMoney"
                android:textColor="@color/holo_blue_light"
                android:textSize="@dimen/tv_large" />

            <TextView
                android:id="@+id/textView_averageMoney"
                style="@style/TextViewInLinear"
                android:paddingLeft="@dimen/padding_normal"
                android:textColor="@color/holo_red_light"
                android:textSize="@dimen/tv_large" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/linearLayout_calculate"
            style="@style/Button.average.background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/holo_orange_light" >

            <TextView
                android:id="@+id/textView_calculate"
                style="@style/Button"
                android:drawableLeft="@drawable/ic_menu_help"
                android:text="@string/calculate"
                android:textSize="@dimen/tv_large" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>